# optimizely-rust-sdk

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
.circleci/: config.yml
.github/workflows/: rust.yml
datafiles/: .gitignore  sandbox.json
examples/: datafile.json
examples/datafiles/: sandbox.json
examples/network-test/: .gitignore  Cargo.toml
examples/performance-test/: .gitignore  Cargo.toml  README.md  go.mod  package.json  requirements.txt
examples/results-demo/: Cargo.toml
optimizely/: Cargo.toml
optimizely/src/: client.rs  datafile.rs  lib.rs
optimizely/src/client/: builder.rs  initialization.rs  user.rs
optimizely/src/datafile/: audience.rs  audience_condition.rs  boolean_condition.rs  context.rs  environment.rs  error.rs  event.rs  experiment.rs  feature_flag.rs  json.rs  rollout.rs  traffic_allocation.rs  variation.rs
optimizely/src/decision/: decide_options.rs
optimizely/src/event_api/: client.rs  error.rs  event.rs  request.rs  trait_event_dispatcher.rs
optimizely/src/event_api/request/: event.rs  payload.rs  snapshot.rs  visitor.rs
optimizely/tests/: client_initialization.rs  decisions.rs  user_context.rs
optimizely/tests/common/: mod.rs
src/: client.rs  datafile.rs  decision.rs  event.rs  event_api.rs  lib.rs  macros.rs  optimizely.rs  user_context.rs
src/client/: builder.rs  datafile_error.rs  error.rs  user.rs
src/datafile/: error.rs  experiment.rs  feature_flag.rs  json.rs  (+3 more)
tests/: client_initialization.rs  datafile.example.json  decisions.rs  integration_test.rs  playground.rs  user_context.rs
(+37 files in other folders)
