[package]
name = "optimizely"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serde_json = "1.0.94"
thiserror = "1.0"
anyhow = "1.0"
ureq = "2.5.0"
fasthash = "0.4.0"
log = "0.4.17"

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng"]
