[package]
name = "optimizely"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.94"
thiserror = "1.0"
error-stack = "0.3.1"
fasthash = "0.4.0"
log = "0.4.17"

[dependencies.ureq]
version = "2.5.0"
optional = true

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng"]

[features]
online = ["dep:ureq"]
