[package]
name = "optimizely"
version = "0.2.0"
edition = "2021"

[dependencies]
serde_json = "1.0.107"
thiserror = "1.0"
error-stack = "0.3.1"
murmur3 = "0.5.2"
log = "0.4.17"

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.ureq]
version = "2.5.0"
optional = true

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng"]

[features]
online = ["dep:ureq"]
